Set default page size to 20. Fix overflow issue with pagination

--- a/apps/modernization-ui/src/apps/deduplication/patient-merge/landing/matches-requiring-review-table/matches-requiring-review.module.scss
+++ b/apps/modernization-ui/src/apps/deduplication/patient-merge/landing/matches-requiring-review-table/matches-requiring-review.module.scss
@@ -7,23 +7,29 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    background-color: colors.$base-white;
-    overflow: auto;
+    overflow: hidden;
 
-    .reviewButton {
+    .tableWrapper {
         display: flex;
-        width: 4.5rem;
-        height: 1.5rem;
-        align-items: center;
-        line-height: normal;
-    }
-}
+        flex-grow: 1;
+        overflow: auto;
+        background-color: colors.$base-white;
 
-.pagination {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 1rem;
-    background-color: colors.$base-white;
-    @extend %thin-top;
+        .reviewButton {
+            display: flex;
+            width: 4.5rem;
+            height: 1.5rem;
+            align-items: center;
+            line-height: normal;
+        }
+    }
+
+    .pagination {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 1rem;
+        background-color: colors.$base-white;
+        @extend %thin-top;
+    }
 }
